Outliner (Data API mode) crash trying to display a MeshSkinVertex in editmode #79961

Closed
opened 2020-08-20 18:52:51 +02:00 by Marco Di Vita · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: c2b144df39, 2.90, 2.91 ce0bcd5fb
Worked: Never (2.79 has the same problem)

Short description of error
Outliner (Data API mode) crash trying to display a MeshSkinVertex in editmode

Exact steps for others to reproduce the error
T79961_repro.blend

  • Open file
  • Cube should be in editmode
  • In the Outliner (should be in Data API mode):
    • navigate to Meshes > Cube > Skin Vertices > expand the dot as well
    • crash
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.83.5, branch: master, commit date: 2020-08-19 06:07, hash: `c2b144df39`, 2.90, 2.91 ce0bcd5fb Worked: Never (2.79 has the same problem) **Short description of error** Outliner (Data API mode) crash trying to display a MeshSkinVertex in editmode **Exact steps for others to reproduce the error** [T79961_repro.blend](https://archive.blender.org/developer/F9600946/T79961_repro.blend) - Open file - Cube should be in editmode - In the Outliner (should be in Data API mode): - navigate to Meshes > Cube > Skin Vertices > expand the dot as well - crash
Author

Added subscriber: @mr.marcodivita

Added subscriber: @mr.marcodivita

Added subscriber: @iss

Added subscriber: @iss

Exception thrown at 0x00007FF6FE3116CF in blender.exe: 0xC0000005: Access violation reading location 0x0000000000000010.

>	blender.exe!rna_property_rna_or_id_get(PropertyRNA * prop, PointerRNA * ptr, PropertyRNAOrID * r_prop_rna_or_id) Line 582	C

 	[Inline Frame] blender.exe!rna_idproperty_check(PropertyRNA * *) Line 644	C
 	blender.exe!RNA_property_collection_length(PointerRNA * ptr, PropertyRNA * prop) Line 3971	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1096	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1154	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1154	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1146	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1154	C
 	blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103	C
 	blender.exe!outliner_build_tree(Main * mainvar, Scene * scene, ViewLayer * view_layer, SpaceOutliner * space_outliner, ARegion * region) Line 2522	C
 	blender.exe!draw_outliner(const bContext * C) Line 3628	C
 	blender.exe!outliner_main_region_draw(const bContext * C, ARegion * region) Line 95	C
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 537	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 697	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 825	C
 	blender.exe!wm_draw_update(bContext * C) Line 1028	C
 	blender.exe!WM_main(bContext * C) Line 483	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548	C
 	[External Code]	
`Exception thrown at 0x00007FF6FE3116CF in blender.exe: 0xC0000005: Access violation reading location 0x0000000000000010.` ``` > blender.exe!rna_property_rna_or_id_get(PropertyRNA * prop, PointerRNA * ptr, PropertyRNAOrID * r_prop_rna_or_id) Line 582 C [Inline Frame] blender.exe!rna_idproperty_check(PropertyRNA * *) Line 644 C blender.exe!RNA_property_collection_length(PointerRNA * ptr, PropertyRNA * prop) Line 3971 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1096 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1154 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1154 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1146 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1154 C blender.exe!outliner_add_element(SpaceOutliner * space_outliner, ListBase * lb, void * idv, TreeElement * parent, short type, short index) Line 1103 C blender.exe!outliner_build_tree(Main * mainvar, Scene * scene, ViewLayer * view_layer, SpaceOutliner * space_outliner, ARegion * region) Line 2522 C blender.exe!draw_outliner(const bContext * C) Line 3628 C blender.exe!outliner_main_region_draw(const bContext * C, ARegion * region) Line 95 C blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 537 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 697 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 825 C blender.exe!wm_draw_update(bContext * C) Line 1028 C blender.exe!WM_main(bContext * C) Line 483 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 548 C [External Code] ```

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser changed title from Blender Crashes if entering in Edit Mode after assigning drivers to control Skin Vertices Radius of an object with Skin Modifier to Outliner (Data API mode) crash trying to display a MeshSkinVertex in editmode 2021-01-27 17:58:55 +01:00

Added subscriber: @natecraddock

Added subscriber: @natecraddock
Nathan Craddock self-assigned this 2021-02-11 19:02:52 +01:00
>>> for data in D.meshes['Cube'].skin_vertices[''].data:

...     print(data.radius)

Running this code (with the provided sample file) in the Python console prints nothing in edit mode, but prints the two vertices in object mode.

The data collection is null while in edit mode, but is valid in object mode. I'll look into this further to determine if it's an outliner issue or can be solved at another level.

``` >>> for data in D.meshes['Cube'].skin_vertices[''].data: ... print(data.radius) ``` Running this code (with the provided sample file) in the Python console prints nothing in edit mode, but prints the two vertices in object mode. The data collection is null while in edit mode, but is valid in object mode. I'll look into this further to determine if it's an outliner issue or can be solved at another level.
Philipp Oeser removed the
Interest
User Interface
label 2023-02-10 09:24:12 +01:00
Philipp Oeser self-assigned this 2024-03-07 10:05:23 +01:00
Member

Possible fix in !119149

Possible fix in !119149
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-07 11:31:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79961
No description provided.